# dexdo-halo2-kit

./: .gitignore  Cargo.toml  NOTICE.md  README.md
dark_dex_halo2_private_witness_export_lib/: Cargo.toml
dark_dex_halo2_private_witness_export_lib/src/: block.rs  blockchain.rs  lib.rs  main.rs  poseidon.rs  proof.rs  types.rs
dex-halo2-circuit/: CLAUDE.md  Cargo.toml  RootPN.abi.json  event.boc  event_.boc  readme.md  vouchers.txt
dex-halo2-circuit/src/: boc_helper.rs  circuit_helper.rs  dark_dex_circuit_new.rs  event_data_helper.rs  lib.rs  poseidon.rs  test_helpers.rs
dex-halo2-circuit/tests/: test_real_data.rs  test_sk_commit_compatibility.rs
dex-halo2-circuit/tests/fixtures/: dex_fixture_L0_H197_S0.json  dex_fixture_L1_H197_S0.json  dex_fixture_L2_H197_S1.json  dex_fixture_live_L2_H626_S0.json
halo2-proover/: CLAUDE.md  Cargo.toml  README.md  dex_fixture_live_L1_H277_S0.json  dex_fixture_live_L1_H43214_S0.json  dex_fixture_live_L1_H47076_S0.json  dex_fixture_live_L2_H1904_S0.json
halo2-proover/src/: lib.rs  main.rs
sk-commit-tool/: Cargo.toml
sk-commit-tool/src/: main.rs
