[workspace]
resolver = "2"
members = ["dex-halo2-circuit", "halo2-proover"]

# Ensure all transitive dependencies use the same halo2-base from git.
[patch.crates-io]
halo2-base = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "main" }

[profile.dev]
opt-level = 3
