[package]
name = "dark_dex_halo2_private_witness_export_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "dark_dex_halo2_private_witness_export_lib"
path = "src/lib.rs"

[[bin]]
name = "dex_data_exporter"
path = "src/main.rs"

[dependencies]
# Lightweight acki-nacki types crate — provides Envelope<AckiNackiBlock>,
# BlockHeight, history_proof helpers, ThreadIdentifier/AccountRouting, etc.
node-block-client = { git = "https://github.com/gosh-sh/acki-nacki.git", branch = "poseidon_dex" }

anyhow = "1.0.97"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed-builder = "0.20.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = "0.10.8"
