[package]
name = "dark_dex_halo2_private_witness_export_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "dark_dex_halo2_private_witness_export_lib"
path = "src/lib.rs"

[[bin]]
name = "dex_data_exporter"
path = "src/main.rs"

[dependencies]
# Poseidon-bn254 hashing (same crates the node uses → byte-identical roots).
# All other history-proof / node-types code is vendored locally (see
# src/poseidon.rs, src/types.rs) so we don't pull the acki-nacki monorepo.
pse-poseidon = { git = "https://github.com/axiom-crypto/pse-poseidon.git" }
halo2-base = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "main", default-features = false, features = ["halo2-axiom"] }

anyhow = "1.0.97"
clap = { version = "4.5.2", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typed-builder = "0.20.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = "0.10.8"
