[package]
name = "halo2-proover"
version = "0.3.0"
edition = "2021"

[lib]
name = "halo2_proover"
path = "src/lib.rs"

[[bin]]
name = "halo2-proover"
path = "src/main.rs"

[dependencies]
thiserror = "2"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

gosh-dark-dex-halo2-new-circuit = { path = "../dex-halo2-circuit", package = "dex-halo2-circuit" }
gosh-dense-balanced-tree = { git = "https://github.com/gosh-sh/gosh-halo2-crypto-lib", branch = "main" }
halo2-base = { git = "https://github.com/gosh-sh/halo2-lib-zkevm-sha256-and-bls12-381", branch = "main", default-features = false, features = ["halo2-axiom", "test-utils"] }
tvm_types = { git = "https://github.com/tvmlabs/tvm-sdk.git", package = "tvm_types" }
tvm_block = { git = "https://github.com/tvmlabs/tvm-sdk.git", package = "tvm_block" }
pse-poseidon = { git = "https://github.com/axiom-crypto/pse-poseidon.git" }
failure = "0.1"
